practice/cv.css
body{
    margin: 0;
    padding-top: 0;
    padding-bottom: 0;
    font-family: Helvetica, sans-serif;
    background-color: #fcfcfc;
    display: flex;
    justify-content: center;}

#main{
    display: flex;
    flex-direction: row;
    width: 60vw;
    height: 120vh;
    color: white;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
}

#sidebar{
    background-color: #223d39;
    width: 18vw;
    height: 100%;
    border-right: 1px solid black;
    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
}

.avatar{
    width: 13.3vw;
    height: 22vh;
    padding-left: 16%;
    margin-top: 10%;
    margin-bottom: 10%
}

#contact{
    padding-top: 0;
    margin-left: 16%;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    border-top: 1.5px solid white;
    margin-right: 10%;
    margin-bottom: 6%;
}

#contact>h2{
    font-size: 0.9em;
    font-weight: 800;
    margin-top: 0;
    margin-bottom: 0;
    padding-top: 0;
    padding-bottom: 0;
    color: white;
    padding-bottom: 5%;
}

#contact>p{
    font-size: 0.7em;
    margin-top: 0;
}

.contact-text{
    padding-left: 10%
}

#skills{
    padding-top: 0;
    margin-left: 16%;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    border-top: 1.5px solid white;
    margin-right: 10%;
    margin-bottom: 6%;
}

#skills>h2{
    font-size: 0.9em;
    font-weight: 800;
    margin-top: 0;
    margin-bottom: 0;
    padding-top: 0;
    padding-bottom: 0;
    color: white;
    padding-bottom: 5%;
}

#skills>ul{
    margin-top: 0;
    margin-left: 0;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}

#skills>ul>li{
    font-size: 0.7em;
    padding-top: 1.5%;
    margin-left: -16%
}

#languages{
    padding-top: 0;
    margin-left: 16%;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    border-top: 1.5px solid white;
    margin-right: 10%;
    margin-bottom: 10%
}

#languages>h2{
    font-size: 0.9em;
    font-weight: 800;
    margin-top: 0;
    margin-bottom: 0;
    padding-top: 0;
    padding-bottom: 0;
    color: white;
    padding-bottom: 5%;
}

#languages>p{
    font-size: 0.7em;
    margin-top: 0;
    text-shadow: #fcfcfc 0 0 2px;
    margin-bottom: 2%;
}

#personal{
    padding-top: 0;
    margin-left: 16%;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    border-top: 1.5px solid white;
    margin-right: 10%;
    margin-bottom: 10%
}

#personal>h2{
    font-size: 0.9em;
    font-weight: 800;
    margin-top: 0;
    margin-bottom: 0;
    padding-top: 0;
    padding-bottom: 0;
    color: white;
    padding-bottom: 5%;
}

#personal>p{
    font-size: 0.7em;
    margin-top: 0;
    margin-bottom: 2%;
}
.personal-text{
    margin-top: 0;
    margin-bottom: 2%;
    text-shadow: #fcfcfc 0 0 2px;
}

#rest-of-the-page{
    flex-grow:2;
}

#title{
    color : #223d39;
    margin-top: 0%;
    padding-left: 8.5vw;    
}

#title>h1{
    margin-bottom: 0;
}
#title>p{
    margin-top: 0;
}

#separator {
    margin-top: 1%;
    border-top: 3.5px solid black;
    border-bottom: 3.5px solid black;
    width: 25vw;
    margin-left: auto;
    margin-right: auto;
}

#professional-summary{
    color: black;
    padding-top: 5%
}

#professional-summary>h2{
    margin-left: 2.5vw;
    font-size: 1.2em;
    font-weight: bold;
}

#professional-summary>p{
    margin-left: 2.0vw;
    font-size: 0.9em;
    }

